wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wp
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: wordpress
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/wordpress:latest
          ports:
            - containerPort: 80
